--- a/src/main/resources/static/css/healthfood3.css
+++ b/src/main/resources/static/css/healthfood3.css
@@ -143,7 +143,7 @@
  > tbody
  > tr
  > .onPadding
- > Button { width: 100%; height: 50px; background-color: #fa9058; color: #ffffff; border-radius: 5px; border: 1px solid #fa9058; font-size: 16px; margin: auto; padding: 10px 12px; cursor: pointer; transition: background-color 0.3s ease, color 0.3s ease; } 
+ > form > Button { width: 100%; height: 50px; background-color: #fa9058; color: #ffffff; border-radius: 5px; border: 1px solid #fa9058; font-size: 16px; margin: auto; padding: 10px 12px; cursor: pointer; transition: background-color 0.3s ease, color 0.3s ease; }
 /* #foodTrackerMealLog .inner .frameMain .mealTable Button:hover,
 #foodTrackerList .inner .frameMain .foodListTable Button:hover { background-color: #ffffff; color: #3681AB; } */
 /********************************/
