--- a/src/main/resources/templates/usr/myMealLog/myMealLogFoodDetail.html
+++ b/src/main/resources/templates/usr/myMealLog/myMealLogFoodDetail.html
@@ -33,17 +33,29 @@
       }
     </style>
   </head>
-  <!---로그인 했을 때 + 사이드바---->
+  <script th:inline="javascript">
+    var foodTrackerJson = /*[[${foodTrackerJson}]]*/ '{}';
+    var foodDBResultJsonOneItem = /*[[${foodDBResultJsonOneItem}]]*/ '{}';
+
+    console.log("foodTrackerJson:", foodTrackerJson);
+    console.log("foodDBResultJsonOneItem:", foodDBResultJsonOneItem);
+  </script>
+
+  <!---로그인 했을 때 + 사이드바 style="display: none;" ---->
   <body id="default" >
+
   <div th:replace="common/header :: header"></div>
   <div th:replace="common/sideBar :: sideBar"></div>
+  <!-- JSON 데이터 디버깅 -->
+  <!--  <p th:text="${foodTrackerJson}"></p>-->
+  <!--  <p th:text="${foodDBResultJsonOneItem}"></p>-->
 
     <!--여기부터 개발 시작--->
     <div class="main food-detail px-20 py-3">
       <div class="content pb-5">
         <div class="py-3">
-          <div class="flex justify-between text-2xl">
-            <div class="flex-grow text-center">잡곡밥</div>
+          <div class="flex justify-between text-2xl" >
+            <div class="flex-grow text-center" th:text="${foodDBResultJsonOneItem.FOOD_NM_KR}">잡곡밥</div>
             <div>뒤로▶</div>
           </div>
           <hr class="mt-3 hrcolor5-FA9058" />
@@ -64,7 +76,7 @@
               <option value="1/4">1/4</option>
               <option value="2/4">2/4</option>
               <option value="3/4">3/4</option>
-              <option value="1">1</option>
+              <option value="1" selected>1</option>
               <option value="2">2</option>
               <option value="3">3</option>
               <option value="4">4</option>
@@ -137,6 +149,29 @@
 
     <div class="footer"></div>
   </body>
+  <script>
+    $(document).ready(function(){
+      $(#optionSelect).on("change", function(){
+        let selectedValue = $(this).val();
+        $.ajax({
+          url: "/myMealLog/foodDetailCalculate",
+          type: "POST",
+          contentType: "application/json",
+          data: JSON.stringify({
+            value: selectedValue,
+            foodDBResultJsonOneItem: foodDBResultJsonOneItem
+          }),
+          success: function(data){
+            console.log("결과 응답 데이터: ", data);
+          },
+          error: function (){
+            alert("B 서버 요청 중 오류 발생");
+          }
+        })
+      });
+    });
+
+  </script>
   <script>
     window.addEventListener("scroll", () => {
       const bwLeft = window.scrollX;
