--- a/src/main/resources/templates/usr/myMealLog/myMealLogRecord.html
+++ b/src/main/resources/templates/usr/myMealLog/myMealLogRecord.html
@@ -43,13 +43,13 @@
       <div class="content pb-5">
         <div class="py-3">
           <div class="flex justify-between text-2xl">
-            <div class="flex-grow text-center" th:text="${main_record_ft.ftMealTime}+'식사'">아침식사</div>
+            <div class="flex-grow text-center"><span id="mealTime"></span>식사</div>
             <div>뒤로▶</div>
           </div>
           <hr class="mt-3 hrcolor5-FA9058" />
         </div>
         <form class="mealSearch flex align-center my-2" th:action="@{/myMealLog/goFoodDictionary}" method="POST">
-          <input type="hidden" th:value="${main_record_ft}" />
+          <input type="hidden" th:value="${foodTrackerJson}" name="foodTrackerJson"/>
           <input type="text" placeholder="먹은 음식을 입력하세요" name="searchFoodName"/>
           <button class="button-FA9058 text-base font-medium">검색</button>
         </form>
@@ -158,6 +158,16 @@
 
     <div class="footer"></div>
   </body>
+  <script th:inline="javascript">
+    /*<![CDATA[*/
+    let jsonData = /*[[${foodTrackerJson}]]*/ '{}';
+    let parsedData = JSON.parse(jsonData);
+
+    document.addEventListener("DOMContentLoaded", function() {
+      document.getElementById("mealTime").textContent = parsedData.ftMealTime;
+    });
+    /*]]>*/
+  </script>
   <script>
     window.addEventListener("scroll", () => {
       const bwLeft = window.scrollX;
